# texas-grocery-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: TROUBLESHOOTING.md
docs/.scratch/: task-12-log.md
docs/plans/: 2026-01-30-reliable-store-search-design.md
docs/reviews/: task-12-review.md
src/texas_grocery_mcp/: __init__.py  server.py
src/texas_grocery_mcp/auth/: __init__.py  session.py
src/texas_grocery_mcp/clients/: graphql.py  hash_rediscover.py
src/texas_grocery_mcp/models/: __init__.py  cart.py  errors.py  product.py  store.py
src/texas_grocery_mcp/tools/: __init__.py  cart.py  store.py
src/texas_grocery_mcp/utils/: __init__.py  config.py
tests/: __init__.py
tests/unit/: test_cart_tools.py  test_config.py  test_graphql_client.py  test_graphql_self_heal.py  test_hash_rediscover.py  test_hash_store.py  test_models.py  test_store_tools.py
